--- a/index.html
+++ b/index.html
@@ -1737,7 +1737,7 @@ None
 <a href="http://statsthinking21.org/introduction.html">ST chapters 1-2</a>; <a href="https://learningstatisticswithr.com/book/introR.html">LSR 3.1</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/#september_4">(1) Install R and RStudio; (2) Statistical pre-test</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">(1) Install R and RStudio; (2) Statistical pre-test</a>
 </td>
 </tr>
 <tr>
@@ -1754,7 +1754,7 @@ What are data?
 <a href="https://learningstatisticswithr.com/book/graphics.html">LSR chapter 6</a>; <a href="http://statsthinking21.org/data-visualization.html">ST chapter 6</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/#september_9">Submit a misleading graph</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Submit a misleading graph</a>
 </td>
 </tr>
 <tr>
@@ -1771,7 +1771,7 @@ Visualizing data
 <a href="http://statsthinking21.org/summarizing-data.html">ST chapter 4</a>; <a href="https://learningstatisticswithr.com/book/descriptives.html#centraltendency">LSR 5.1-5.5</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/#september_11">Improve your misleading graph</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Improve your misleading graph</a>
 </td>
 </tr>
 <tr>
@@ -1788,7 +1788,7 @@ Summarizing data
 <a href="http://statsthinking21.org/probability.html">ST 3.1-3.3</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/#september_16">Normal vs long-tailed distributions</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Normal vs long-tailed distributions</a>
 </td>
 </tr>
 <tr>
@@ -1805,7 +1805,7 @@ What is probability?
 <a href="https://learningstatisticswithr.com/book/probability.html#binomial">LSR 9.4</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/#september_18">Batting average</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Batting average</a>
 </td>
 </tr>
 <tr>
@@ -1822,7 +1822,7 @@ Binomial distribution
 <a href="http://onlinestatbook.com/2/normal_distribution/history_normal.html">OSB 7.3-7.7</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/#september_23">Racial profiling analysis</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Racial profiling analysis</a>
 </td>
 </tr>
 <tr>
@@ -1839,7 +1839,7 @@ Normal distribution
 <a href="https://learningstatisticswithr.com/book/estimation.html">LSR 10.1-10.2</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/#september_25">Class data</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Class data</a>
 </td>
 </tr>
 <tr>
