--- a/homework.html
+++ b/homework.html
@@ -1566,7 +1566,15 @@ The pre-test can be found <a href="https://docs.google.com/forms/d/e/1FAIpQLSe9S
 </div>
 <div id="september-9" class="section level2">
 <h2>September 9</h2>
-<p>Based on today’s conversation of misleading graphs, I want you to find your own misleading data visualization. The visualization should be representing quantitative data, and may be taken from a news source, an advertisement, etc. Once you have identified your misleading graph, save the image (screenshot is fine), and write a 3-5 sentence paragraph underneath it describing what is misleading about it. Save your file as a single-page PDF and upload to Lyceum.</p>
+<p><strong>Part 1</strong> Download sleepData.csv from Lyceum. This file represents the last ~2.5 years of sleep data from yours truly. I want you to practice reading in data and getting insights from it. Please follow each of the following steps, and place the code that you used to do this in a text file.</p>
+<ul>
+<li>Read in sleepData.csv in R Studio.<br />
+</li>
+<li>Using $ notation as well as built-in R functions that you learned in class, find the minimum and maximum sleep times over the recording period.<br />
+</li>
+<li>For both minimum and maximum times, convert from minutes to hours in your report.</li>
+</ul>
+<p><strong>Part 2</strong> Based on the ST reading on misleading graphs, I want you to find your own misleading data visualization. The visualization should be representing quantitative data, and may be taken from a news source, an advertisement, etc. Once you have identified your misleading graph, save the image (screenshot is fine), and write a 3-5 sentence paragraph underneath it describing what is misleading about it. Please append this to your Part 1 homework, and save your file as a single PDF and upload to Lyceum.</p>
 </div>
 <div id="september-11" class="section level2">
 <h2>September 11</h2>
