--- a/homework.html
+++ b/homework.html
@@ -1542,11 +1542,12 @@ div.tocify {
 2. Open the downloaded .pkg file and follow the instructions to install R.<br />
 <br />
 <strong>For Linux:</strong><br />
-1. For complete R installation in Linux, follow the instructions <a href="https://cran.r-project.org/bin/linux/ubuntu/README">here.</a>. 2. For Linux distributions with <em>apt-get</em> installed (Debian, Ubuntu, etc.) execute the following command in your terminal:</p>
+1. For complete R installation in Linux, follow the instructions <a href="https://cran.r-project.org/bin/linux/ubuntu/README">here</a>.<br />
+2. For Linux distributions with <em>apt-get</em> installed (Debian, Ubuntu, etc.) execute the following command in your terminal:</p>
 <pre><code>sudo apt-get install r-base</code></pre>
 <p><br />
 <strong>For Windows:</strong><br />
-1. Download the binary setup file for R <a href="https://cran.r-project.org/bin/windows/base/R-3.1.2-win.exe">from this link.</a><br />
+1. Download the binary setup file for R <a href="https://cran.r-project.org/bin/windows/base/">from this link.</a><br />
 2. Open the downloaded .exe file and follow the instructions to install R.<br />
 <br />
 </p>
