--- a/index.html
+++ b/index.html
@@ -1596,6 +1596,10 @@ Option 2: Stop by Hathorn 106 - I’m happy to meet when my door is open!</p>
 <h3>Electronics:</h3>
 <p>Please silence your cell phone upon entering class and refrain from using it during class. <strong>When we are not working with R, this is laptop-free classroom</strong>. There are good reasons for this: laptop use is <a href="http://www.sciencedirect.com/science/article/pii/S0360131506001436">correlated with lower learning outcomes for you and those around you</a>, and the act of <a href="http://pss.sagepub.com/content/25/6/1159.full">taking notes on the laptop is less effective than hand-written notes</a>. The only exceptions are those with documented accommodations from the Dean of Students.</p>
 </div>
+<div id="email" class="section level3">
+<h3>Email:</h3>
+<p>Emails sent to me between 7:00am and 6:00pm will receive a same-day response. I will do my best to respond all emails within 24 hours of receiving, but may be slower for those sent late at night, as well as during weekends and breasks.</p>
+</div>
 </div>
 <div id="helpful-resources" class="section level1">
 <h1>Helpful Resources</h1>
@@ -1751,7 +1755,7 @@ What are data?
 <a href="http://statsthinking21.org/introduction.html">ST chapters 1-2</a>; <a href="https://learningstatisticswithr.com/book/introR.html">LSR 3.1</a>
 </td>
 <td style="text-align:left;">
-<a href="https://learningstatisticswithr.com/book/graphics.html">LSR chapter 6</a>; <a href="http://statsthinking21.org/data-visualization.html">ST chapter 6</a>
+<a href="https://learningstatisticswithr.com/book/graphics.html">LSR chapter 6</a>; <a href="http://statsthinking21.org/data-visualization.html">ST chapter 6.4-6.10</a>
 </td>
 <td style="text-align:left;">
 <a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Submit a misleading graph</a>
@@ -1765,13 +1769,13 @@ What are data?
 Visualizing data
 </td>
 <td style="text-align:left;">
-<a href="https://learningstatisticswithr.com/book/graphics.html">LSR chapter 6</a>; <a href="http://statsthinking21.org/data-visualization.html">ST chapter 6</a>
+<a href="https://learningstatisticswithr.com/book/graphics.html">LSR chapter 6</a>; <a href="http://statsthinking21.org/data-visualization.html">ST chapter 6.4-6.10</a>
 </td>
 <td style="text-align:left;">
 <a href="http://statsthinking21.org/summarizing-data.html">ST chapter 4</a>; <a href="https://learningstatisticswithr.com/book/descriptives.html#centraltendency">LSR 5.1-5.5</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Improve your misleading graph</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Improve your misleading graph</a>
 </td>
 </tr>
 <tr>
@@ -1788,7 +1792,7 @@ Summarizing data
 <a href="http://statsthinking21.org/probability.html">ST 3.1-3.3</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Normal vs long-tailed distributions</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Normal vs long-tailed distributions</a>
 </td>
 </tr>
 <tr>
@@ -1805,7 +1809,7 @@ What is probability?
 <a href="https://learningstatisticswithr.com/book/probability.html#binomial">LSR 9.4</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Batting average</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Batting average</a>
 </td>
 </tr>
 <tr>
@@ -1822,7 +1826,7 @@ Binomial distribution
 <a href="http://onlinestatbook.com/2/normal_distribution/history_normal.html">OSB 7.3-7.7</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Racial profiling analysis</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Racial profiling analysis</a>
 </td>
 </tr>
 <tr>
@@ -1839,7 +1843,7 @@ Normal distribution
 <a href="https://learningstatisticswithr.com/book/estimation.html">LSR 10.1-10.2</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework/">Class data</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Class data</a>
 </td>
 </tr>
 <tr>
