--- a/homework.html
+++ b/homework.html
@@ -1583,11 +1583,11 @@ The pre-test can be found <a href="https://docs.google.com/forms/d/e/1FAIpQLSe9S
 </div>
 <div id="september-16" class="section level2">
 <h2>September 16</h2>
-<ol style="list-style-type: lower-alpha">
-<li>Give three examples (other than ones we discussed in class) of data distributions that follow a normal distribution.<br />
-</li>
-<li>Give three examples (other than ones we discussed in class) of data distributions that follow a long-tailed distribution.</li>
-</ol>
+<p><strong>Part 1:</strong><br />
+Describe a typical student in our class. Use the appropriate measures of central tendency and variability to describe both what are the most common traits in the studentDemographics.csv file as well as how they vary. You should write for a non-technical audience, such as a newspaper article.</p>
+<p><strong>Part 2:</strong><br />
+(a) Give three examples (other than ones we discussed in class) of data distributions that follow a normal distribution.<br />
+(b) Give three examples (other than ones we discussed in class) of data distributions that follow a long-tailed distribution.</p>
 </div>
 <div id="september-18" class="section level2">
 <h2>September 18</h2>
