--- a/index.html
+++ b/index.html
@@ -1699,7 +1699,7 @@ Option 2: Stop by Hathorn 106 - I’m happy to meet when my door is open!</p>
 <p>We will be using selections from the following (free) open textbooks:</p>
 <p>Danielle Navarro (2019) <a href="https://learningstatisticswithr.com/book/">Learning Statistics with R</a> (Abbreviated LSR)</p>
 <p>Russell A. Poldrack (2018) <a href="http://statsthinking21.org/index.html">Statistical Thinking for the 21st Century</a> (Abbreviated ST)</p>
-<p>David M. Diez, Christopher D. Barr &amp; Mine Cetinkaya-Rundel. (2014) <a href="https://drive.google.com/file/d/0B-DHaDEbiOGkRHNndUlBaHVmaGM/edit">Introductory Statistics with Randomization and Simulation</a> (Abbreviated OIS)<br />
+<p>David M. Diez, Christopher D. Barr &amp; Mine Cetinkaya-Rundel. (2014) <a href="x">Introductory Statistics with Randomization and Simulation</a> (Abbreviated OIS)<br />
 If you would like a copy of this source in print, there are <a href="https://www.openintro.org/redirect.php?go=amazon_isrs1&amp;referrer=/stat/textbook.php">very affordable ($8.49) copies on Amazon.</a></p>
 <p>David Lane (n.d.) <a href="onlinestatbook.com">Online Statistics: An Interactive Multimedia Course of Study</a> (Abbreviated OSB)</p>
 <p>The reading schedule is on the course schedule. Readings that are covered on the quiz are under “Readings”, and readings that will enable you to work ahead are listed in “Read Ahead”.</p>
@@ -1789,7 +1789,7 @@ Summarizing data
 <a href="http://statsthinking21.org/summarizing-data.html">ST chapter 4</a>; <a href="https://learningstatisticswithr.com/book/descriptives.html#centraltendency">LSR 5.1-5.5</a>
 </td>
 <td style="text-align:left;">
-<a href="http://statsthinking21.org/probability.html">ST 3.1-3.3</a>
+<a href="http://statsthinking21.org/probability.html">ST 3.1-3.2</a>
 </td>
 <td style="text-align:left;">
 <a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Normal vs long-tailed distributions</a>
@@ -1803,7 +1803,7 @@ Summarizing data
 What is probability?
 </td>
 <td style="text-align:left;">
-<a href="http://statsthinking21.org/probability.html">ST 3.1-3.3</a>
+<a href="http://statsthinking21.org/probability.html">ST 3.1-3.2</a>
 </td>
 <td style="text-align:left;">
 <a href="https://learningstatisticswithr.com/book/probability.html#binomial">LSR 9.4</a>
