--- a/homework.html
+++ b/homework.html
@@ -1606,7 +1606,9 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="september-23" class="section level2">
 <h2>September 23</h2>
-<p>Consider the racial profiling example that we started in class. Using the binomial distribution, state whether or not you have evidence that the Philadelphia police were profiling African American drivers. Then, compute the complementary analysis: is there any evidence that police were pulling over <em>too few</em> non-Black drivers? Why or why not? Last, consider the assumptions of using the binomial distribution here. Is this a good model for this problem? Why or why not? Submit a single page PDF with your analysis to Lyceum.</p>
+<p>Consider the racial profiling example that we started in class:</p>
+<p><em>In a certain week in 1997, the police at a certain location in Philadelphia made 262 car stops. Of these, 207 drivers were African American. Among the whole population of Philadelphia, 42.2% were African American in 1997. Does this prove the police were guilty of racial profiling, i.e. deliberately stopping drivers because they were African Americans?</em></p>
+<p>Using the binomial distribution, state whether or not you have evidence that the Philadelphia police were profiling African American drivers. Then, compute the complementary analysis: is there any evidence that police were pulling over <em>too few</em> non-Black drivers? Why or why not? Last, consider the assumptions of using the binomial distribution here. Is this a good model for this problem? Why or why not? Submit a single page PDF with your analysis to Lyceum.</p>
 </div>
 <div id="september-25" class="section level2">
 <h2>September 25</h2>
