--- a/homework.html
+++ b/homework.html
@@ -1612,12 +1612,19 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="september-25" class="section level2">
 <h2>September 25</h2>
-<p>Download the classData.csv file and starter R-script from Lyceum. The data file contains a row for each student, and column for each of two measurements given at the beginning of the semester: one’s home distance to Bates College, and one’s hand length in cm.</p>
+<p>Download the sleepData.csv file, and load it into your Rstudio using read.csv(). With this data:</p>
 <ul>
-<li>Use the 68-95-99 rule on both data types to verify or refute the truth of this empirical rule.<br />
+<li>Create a variable called sleepHours that converts the original $sleepMinutes field to hours.<br />
 </li>
-<li>Write a 5-9 sentence paragraph on your findings. Why might this rule apply in some cases, but not others? Feel free to include any graphs, charts, code, or other explorations that back up your conclusions.</li>
+<li>Create a histogram of sleepHours. Is this data set normally distributed?<br />
+</li>
+<li>The “95%” rule says that 95% of observations should fall within 2 standard deviations of the mean. Compute the mean and standard deviation of sleepHours, and compute what values constitute the mean - 2sd and the mean + 2sd respectively. Use <em>length()</em> and <em>which()</em> to determine the proportion of observations inside of this range. Does the 95% rule hold up for this set?<br />
+</li>
+<li>Submit a single PDF of your findings. This should be knitted from a .Rmd file.</li>
 </ul>
+</div>
+<div id="september-30" class="section level2">
+<h2>September 30</h2>
 </div>
 </div>
 <div id="october" class="section level1">
