--- a/index.html
+++ b/index.html
@@ -1843,7 +1843,7 @@ Normal distribution
 <a href="https://learningstatisticswithr.com/book/estimation.html">LSR 10.1-10.2</a>
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Class data</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Sleep data</a>
 </td>
 </tr>
 <tr>
@@ -1854,10 +1854,13 @@ Normal distribution
 Sampling
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/estimation.html">LSR 10.1-10.2</a>
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/sampling-1.html#the-central-limit-theorem">ST 7.4</a>; <a href="https://learningstatisticswithr.com/book/estimation.html#samplesandclt">LSR 10.3</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Sampling strategy</a>
 </td>
 </tr>
 <tr>
@@ -1868,10 +1871,13 @@ Sampling
 Central limit theorem
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/sampling-1.html#the-central-limit-theorem">ST 7.4</a>; <a href="https://learningstatisticswithr.com/book/estimation.html#samplesandclt">LSR 10.3</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/estimation.html#pointestimates">LSR 10.4</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">CLT lab</a>
 </td>
 </tr>
 <tr>
@@ -1882,10 +1888,13 @@ Central limit theorem
 Estimating population parameters
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/estimation.html#pointestimates">LSR 10.4</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/estimation.html#ci">LSR 10.5</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Population parameters</a>
 </td>
 </tr>
 <tr>
@@ -1896,10 +1905,13 @@ Estimating population parameters
 Confidence intervals
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/estimation.html#ci">LSR 10.5</a>
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/sampling-1.html#confidence-intervals">ST 7.5</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Confidence intervals</a>
 </td>
 </tr>
 <tr>
@@ -1910,10 +1922,13 @@ Confidence intervals
 Confidence intervals
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/sampling-1.html#confidence-intervals">ST 7.5</a>
 </td>
 <td style="text-align:left;">
+none
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Confidence intervals</a>
 </td>
 </tr>
 <tr>
