--- a/homework.html
+++ b/homework.html
@@ -1625,6 +1625,7 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="september-30" class="section level2">
 <h2>September 30</h2>
+<p>You wish to sample Bates College students for their opinions about the 2020 Presidential election. Devise a method for creating a random sample of 100 students for your survey. Please comment on any possible downfalls of your sampling method. I will not count words, but a sufficiently detailed answer will likely be 100-400 words. Please submit your responses to Lyceum in whatever method works best for you.</p>
 </div>
 </div>
 <div id="october" class="section level1">
