--- a/homework.html
+++ b/homework.html
@@ -1632,6 +1632,8 @@ Describe a typical student in our class. Use the appropriate measures of central
 <h1>October</h1>
 <div id="october-2" class="section level2">
 <h2>October 2</h2>
+<p>Using the cltStarter.Rmd, fill in the missing code to run the simulation. Here, you will use a range of sample sizes from 2 to 100 to show how the mean of the sampling distribution approaches <span class="math inline">\(\mu\)</span>, and that the standard deviation of the sampling distribution approaches the standard error of the mean (<span class="math inline">\(\sigma/ \sqrt{n}\)</span>). Using your data, please comment on the common statistical adage that the central limit theorem tells us that sample sizes should contain at least 30 items.</p>
+<p><strong>Important note</strong> Because the code is incomplete, you will receive a knitting error until the code runs properly. Use the green comments as instructions that point you to the lines that need editing from you (there will be 4 of them). Knit your document to PDF or Word, and upload to Lyceum.</p>
 </div>
 <div id="october-7" class="section level2">
 <h2>October 7</h2>
