--- a/homework.html
+++ b/homework.html
@@ -1637,6 +1637,8 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="october-7" class="section level2">
 <h2>October 7</h2>
+<p>In class, you saw that there is a systematic bias in sample standard deviations that cannot be easily corrected like variance can. It turns out that correcting this bias is actually very hard, and depends on this distribution of the data in ways that go beyond the scope of this course. However, it has been suggested that using <span class="math inline">\(\sqrt(\frac{1}{n-1.5})\sum_{i=1}^n(x_i-\bar{x})^2\)</span> will correct the bias in most cases.</p>
+<p>Starting with biasHomework.Rmd, fill in the relevant lines to compute sample means, uncorrected sample variance, corrected sample variance, uncorrected sample standard deviation (using sd() is fine here), and corrected sample standard deviation using the equation above. In 1-2 sentences, comment on whether this new correction seems to work.</p>
 </div>
 <div id="october-9" class="section level2">
 <h2>October 9</h2>
