--- a/homework.html
+++ b/homework.html
@@ -1642,6 +1642,15 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="october-9" class="section level2">
 <h2>October 9</h2>
+<p>In your own .Rmd file, read in the studentDemographics.csv file available on Lyceum. Recall that these data came from the student survey at the beginning of the semester. Using these data, compute 95% confidence intervals for the following variables:</p>
+<ul>
+<li>television time</li>
+<li>number of siblings</li>
+<li>coffee consumed</li>
+<li>distance home</li>
+<li>hand length (being sure to omit the 46 cm outlier)</li>
+</ul>
+<p>Knit your markdown file to a format of your choice, and upload to Lyceum.</p>
 </div>
 <div id="october-14" class="section level2">
 <h2>October 14</h2>
