--- a/homework.html
+++ b/homework.html
@@ -1654,6 +1654,7 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="october-14" class="section level2">
 <h2>October 14</h2>
+<p>Using confidenceIntervals.Rmd that is available on Lyceum, fill in the existing code to simulate 10,000 experiments. In each experiment, take a sample from a known distribution, and calculate a 95% confidence interval for your sample. Fill in the code that keeps track of “if” each interval contains the population mean. Follow the remaining directions in order to check the behavior for 90% confidence intervals, and also how sample size affects the calculations. <strong>Note: please do <strong>not</strong> change curly brackets - they are there for a reason!</strong></p>
 </div>
 <div id="october-21" class="section level2">
 <h2>October 21</h2>
