--- a/index.html
+++ b/index.html
@@ -1953,10 +1953,13 @@ NO CLASS: FALL BREAK
 Resampling and simulation
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/resampling-and-simulation.html">ST Chapter 8</a>
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/hypothesis-testing.html">ST Chapter 9</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Bootstrapping</a>
 </td>
 </tr>
 <tr>
@@ -1967,10 +1970,13 @@ Resampling and simulation
 Theory of hypothesis testing
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/hypothesis-testing.html">ST Chapter 9</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/hypothesistesting.html">LSR 11.1-11.5</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Simulating chance</a>
 </td>
 </tr>
 <tr>
@@ -1981,10 +1987,13 @@ Theory of hypothesis testing
 Hypothesis testing through simulation
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/hypothesistesting.html">LSR 11.1-11.5</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/ttest.html">LSR 13.1-13.7</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Simulating a hypothesis test</a>
 </td>
 </tr>
 <tr>
@@ -1995,10 +2004,13 @@ Hypothesis testing through simulation
 Hypothesis testing: t-test
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/ttest.html">LSR 13.1-13.7</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/hypothesistesting.html#effectsize">LSR 11.8 and 13.8</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">T-tests</a>
 </td>
 </tr>
 <tr>
@@ -2009,8 +2021,10 @@ Hypothesis testing: t-test
 Effect size
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/hypothesistesting.html#effectsize">LSR 11.8 and 13.8</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/descriptives.html#correl">LSR 5.7</a> <a href="http://statsthinking21.org/modeling-continuous-relationships.html#covariance-and-correlation">ST 13.3.1 and 13.3.2 and 13.4</a>
 </td>
 <td style="text-align:left;">
 </td>
@@ -2023,8 +2037,10 @@ Effect size
 Correlation
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/descriptives.html#correl">LSR 5.7</a> <a href="http://statsthinking21.org/modeling-continuous-relationships.html#covariance-and-correlation">ST 13.3.1 and 13.3.2 and 13.4</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/regression.html">LSR 15.1-14.4.2</a>
 </td>
 <td style="text-align:left;">
 </td>
@@ -2037,8 +2053,10 @@ Correlation
 Univariate linear regression
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/regression.html">LSR 15.1-14.4.2</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/regression.html#the-adjusted-r2-value">LSR 15.4.3 to end of chapter</a>
 </td>
 <td style="text-align:left;">
 </td>
@@ -2051,8 +2069,10 @@ Univariate linear regression
 Multivariate linear regression
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/regression.html#the-adjusted-r2-value">LSR 15.4.3 to end of chapter</a>
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/the-general-linear-model.html">ST Chapter 14</a>
 </td>
 <td style="text-align:left;">
 </td>
@@ -2065,8 +2085,10 @@ Multivariate linear regression
 General linear model
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/the-general-linear-model.html">ST Chapter 14</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/anova2.html">LSR 16.1-16.3</a>
 </td>
 <td style="text-align:left;">
 </td>
@@ -2079,8 +2101,10 @@ General linear model
 ANOVA
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/anova2.html">LSR 16.1-16.3</a>
 </td>
 <td style="text-align:left;">
+none
 </td>
 <td style="text-align:left;">
 </td>
