--- a/homework.html
+++ b/homework.html
@@ -1658,6 +1658,7 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="october-21" class="section level2">
 <h2>October 21</h2>
+<p>Using monteCarlo.Rmd, fill in the existing code to work through bootstrapping, using both the “zap” data and student demographic data for coffee consumption. The last problem features a permutation test. Please submit your knitted file (PDF, .docx, or html only) - .Rmd files will no longer be accepted.</p>
 </div>
 <div id="october-23" class="section level2">
 <h2>October 23</h2>
