--- a/homework.html
+++ b/homework.html
@@ -1662,6 +1662,8 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="october-23" class="section level2">
 <h2>October 23</h2>
+<p><strong>Part 1:</strong> If you have not completed your permutation code from last time, please complete it now. If you are done, feel free to continue on to Part 2.</p>
+<p><strong>Part 2:</strong> Your permutation test showed no statistically significant difference in the coffee consumption of sophomores and seniors. Imagine that your grade depended on getting a significant result — how would you “p-hack” this data set to get your desired result? Note that your answer should avoid outright fraud. You may choose to exclude datapoints if you provide a (non- p-hacking) rationale for your decision. Implement your idea: did it give you a p value of 0.05?</p>
 </div>
 <div id="october-28" class="section level2">
 <h2>October 28</h2>
