--- a/homework.html
+++ b/homework.html
@@ -1667,6 +1667,7 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="october-28" class="section level2">
 <h2>October 28</h2>
+<p>The average time for all runners who finished the Cherry Blossom Run in 2006 was 93.29 minutes. We want to determine whether finishing times are getting faster, slower, or staying the same. We will use data from 100 participants in the 2012 Cherry Blossom Run.These 100 runners had a mean finishing time of 95.61 minutes and a standard deviation of 15.78 minutes. Use simNHST.Rmd to fill in your analysis. The correctly implemented graphs are available on Lyceum for you to compare to your own work.</p>
 </div>
 <div id="october-30" class="section level2">
 <h2>October 30</h2>
