--- a/homework.html
+++ b/homework.html
@@ -1671,6 +1671,16 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="october-30" class="section level2">
 <h2>October 30</h2>
+<p>At lunch, your friend asserts the following hypothesis: “International students are less likely to study abroad because they already are abroad.” You are not sure if they are correct, but wonder if the student demographic data we collected can help. You reason that students who live farther from Bates are more likely to be international students, so if your friend’s hypothesis is correct, students in our class who have not studied abroad will have a larger distance home when compared with students who have.</p>
+<ul>
+<li>What is the null hypothesis for this test?<br />
+</li>
+<li>Using studentDemographics.csv, partition out the students who have studied abroad from those who have not. (Hint: use the same skills that you gained in the coffee problems to help).<br />
+</li>
+<li>Consider the distance home for both groups. Use the appropriate type of t-test to test whether the groups have the same mean distance home.<br />
+</li>
+<li>Report your statistics using the standards learned in class and from the Navarro text. Please submit all code that you used as well.</li>
+</ul>
 </div>
 </div>
 <div id="november" class="section level1">
