--- a/homework.html
+++ b/homework.html
@@ -1687,6 +1687,7 @@ Describe a typical student in our class. Use the appropriate measures of central
 <h1>November</h1>
 <div id="november-4" class="section level2">
 <h2>November 4</h2>
+<p>Run the powerHomework.R script on Lyceum (note that this file requires you to download the <em>pwr</em> library). Observe the resulting graph and comment on what you see. Examine the results (held in <em>samsize</em>) and compare them to the Cohen’s D values (held in <em>d</em>). What sample size is required for a d=0.5 and power of 0.8?</p>
 </div>
 <div id="november-6" class="section level2">
 <h2>November 6</h2>
