--- a/homework.html
+++ b/homework.html
@@ -1691,6 +1691,7 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="november-6" class="section level2">
 <h2>November 6</h2>
+<p>Using the studentDemographics.csv data, use the <em>cor.test()</em> function to test for correlations between all pairs of interval and ratio variables in the set. Report all results in standard form (i.e. t(df)=tStat, p=pVal, CI=[lower upper]) along with your interpretation of the meaning of each test.</p>
 </div>
 <div id="november-11" class="section level2">
 <h2>November 11</h2>
