--- a/homework.html
+++ b/homework.html
@@ -1695,6 +1695,8 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="november-11" class="section level2">
 <h2>November 11</h2>
+<p><strong>Part 1</strong>: If you did not complete your analysis of the vitamin D and cognitive function datasets in class, finish them up here. For each, provide a scatterplot of the variables, calculate the mean and sd of each variable, and the Pearson correlation coefficient between them. Using <em>lm()</em>, fit a linear model, and plot the fit on your scatterplot. Calculate the coefficient of determination (<span class="math inline">\(R^{2}\)</span>) by hand, and verify by getting a summary of your <em>lm()</em> object. Last, write a 1-2 sentence interpretation of your results, considering your regression coefficient and the <span class="math inline">\(R^{2}\)</span>.</p>
+<p><strong>Part 2</strong>: Find a news article from the last six months that covers a scientific study of an association between two variables. Write a paragraph about the how the result was presented to the general public, given your knowledge of correlation and regression. Did the article imply a causal link between variables? What (if any) limitations did it acknowledge in the study? Were these correct? Were there additional limitations that should have been considered?</p>
 </div>
 <div id="november-13" class="section level2">
 <h2>November 13</h2>
