--- a/homework.html
+++ b/homework.html
@@ -1700,6 +1700,13 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="november-13" class="section level2">
 <h2>November 13</h2>
+<p>Using the final Vitamin D data presented in class, analyze whether the assumptions of regression are met:</p>
+<ul>
+<li>Are the two predictors reasonably uncorrelated?</li>
+<li>Is the relationship we are trying to predict linear?</li>
+<li>Are the residuals of the model normally distributed and homoscedastic?</li>
+</ul>
+<p>Include any code that you used to make your determination, along with your analysis.</p>
 </div>
 <div id="november-18" class="section level2">
 <h2>November 18</h2>
