--- a/index.html
+++ b/index.html
@@ -2027,6 +2027,7 @@ Effect size
 <a href="https://learningstatisticswithr.com/book/descriptives.html#correl">LSR 5.7</a> <a href="http://statsthinking21.org/modeling-continuous-relationships.html#covariance-and-correlation">ST 13.3.1 and 13.3.2 and 13.4</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Power</a>
 </td>
 </tr>
 <tr>
@@ -2043,6 +2044,7 @@ Correlation
 <a href="https://learningstatisticswithr.com/book/regression.html">LSR 15.1-14.4.2</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Correlation</a>
 </td>
 </tr>
 <tr>
@@ -2059,6 +2061,7 @@ Univariate linear regression
 <a href="https://learningstatisticswithr.com/book/regression.html#the-adjusted-r2-value">LSR 15.4.3 to end of chapter</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Regression 1</a>
 </td>
 </tr>
 <tr>
@@ -2075,6 +2078,7 @@ Multivariate linear regression
 <a href="http://statsthinking21.org/the-general-linear-model.html">ST Chapter 14</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Regression 2</a>
 </td>
 </tr>
 <tr>
@@ -2091,6 +2095,7 @@ General linear model
 <a href="https://learningstatisticswithr.com/book/anova2.html">LSR 16.1-16.3</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Linear models</a>
 </td>
 </tr>
 <tr>
@@ -2107,6 +2112,7 @@ ANOVA
 none
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">ANOVA</a>
 </td>
 </tr>
 <tr>
@@ -2145,10 +2151,13 @@ NO CLASS: THANKSGIVING BREAK
 Conditional probability
 </td>
 <td style="text-align:left;">
+<a href="http://statsthinking21.org/probability.html#conditional-probability">ST 3.4-3.5</a>
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/bayes.html">LSR Chapter 17</a>
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Conditional probability</a>
 </td>
 </tr>
 <tr>
@@ -2159,10 +2168,13 @@ Conditional probability
 Bayesian reasoning
 </td>
 <td style="text-align:left;">
+<a href="https://learningstatisticswithr.com/book/bayes.html">LSR Chapter 17</a>
 </td>
 <td style="text-align:left;">
+none
 </td>
 <td style="text-align:left;">
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Bayes</a>
 </td>
 </tr>
 <tr>
