--- a/homework.html
+++ b/homework.html
@@ -1710,6 +1710,7 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="november-18" class="section level2">
 <h2>November 18</h2>
+<p>Using the studentDemographics.csv data, use glm() to predict students’ TV time from any two predictors of your choice. Provide a 3-6 sentence interpretation of your findings, including the statistical significance of your predictors, the interpretation of each coefficient (including intercept), and the overall fit of your model. Please include your code as well as your paragraph.</p>
 </div>
 <div id="november-20" class="section level2">
 <h2>November 20</h2>
