--- a/index.html
+++ b/index.html
@@ -2103,7 +2103,7 @@ General linear model
 11/20/19
 </td>
 <td style="text-align:left;">
-ANOVA
+ANOVA, part 1
 </td>
 <td style="text-align:left;">
 <a href="https://learningstatisticswithr.com/book/anova2.html">LSR 16.1-16.3</a>
@@ -2148,16 +2148,16 @@ NO CLASS: THANKSGIVING BREAK
 12/2/19
 </td>
 <td style="text-align:left;">
-Conditional probability
+ANOVA, part 2
 </td>
 <td style="text-align:left;">
-<a href="http://statsthinking21.org/probability.html#conditional-probability">ST 3.4-3.5</a>
+<a href="https://learningstatisticswithr.com/book/anova.html">LSR, chapter 14</a>
 </td>
 <td style="text-align:left;">
-<a href="https://learningstatisticswithr.com/book/bayes.html">LSR Chapter 17</a>
+none
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Conditional probability</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">ANOVA</a>
 </td>
 </tr>
 <tr>
@@ -2165,16 +2165,16 @@ Conditional probability
 12/4/19
 </td>
 <td style="text-align:left;">
-Bayesian reasoning
+Putting it all together
 </td>
 <td style="text-align:left;">
-<a href="https://learningstatisticswithr.com/book/bayes.html">LSR Chapter 17</a>
+Review as needed
 </td>
 <td style="text-align:left;">
 none
 </td>
 <td style="text-align:left;">
-<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Bayes</a>
+<a href="https://mrgreene09.github.io/statsMethods2019/homework.html">Synthesis</a>
 </td>
 </tr>
 <tr>
