--- a/homework.html
+++ b/homework.html
@@ -1714,15 +1714,20 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="november-20" class="section level2">
 <h2>November 20</h2>
+<p>Using ADHD.csv, do the following:<br />
+* Create a chart of RT scores as a function of ADHD diagnosis and letter spacing.<br />
+* Use aov() to do a 3x2 factorial ANOVA to determine the effects of ADHD diagostis and letter spacing on task performance. Make sure to include an interaction term in your model. * Report results of all tests using nomenclature from class and textbook.</p>
 </div>
 </div>
 <div id="december" class="section level1">
 <h1>December</h1>
 <div id="december-2" class="section level2">
 <h2>December 2</h2>
+<p>Complete the statistical reasoning post-test.</p>
 </div>
 <div id="december-4" class="section level2">
 <h2>December 4</h2>
+<p>None. Use this time to work on your final exam.</p>
 </div>
 </div>
 
