--- a/homework.html
+++ b/homework.html
@@ -1714,9 +1714,14 @@ Describe a typical student in our class. Use the appropriate measures of central
 </div>
 <div id="november-20" class="section level2">
 <h2>November 20</h2>
-<p>Using ADHD.csv, do the following:<br />
-* Create a chart of RT scores as a function of ADHD diagnosis and letter spacing.<br />
-* Use aov() to do a 3x2 factorial ANOVA to determine the effects of ADHD diagostis and letter spacing on task performance. Make sure to include an interaction term in your model. * Report results of all tests using nomenclature from class and textbook.</p>
+<p>Using ADHD.csv, do the following:</p>
+<ul>
+<li>Create a chart of RT scores as a function of ADHD diagnosis and letter spacing.<br />
+</li>
+<li>Use aov() to do a 3x2 factorial ANOVA to determine the effects of ADHD diagostis and letter spacing on task performance. Make sure to include an interaction term in your model.<br />
+</li>
+<li>Report results of all tests using nomenclature from class and textbook.</li>
+</ul>
 </div>
 </div>
 <div id="december" class="section level1">
