--- a/homework.html
+++ b/homework.html
@@ -1728,7 +1728,7 @@ Describe a typical student in our class. Use the appropriate measures of central
 <h1>December</h1>
 <div id="december-2" class="section level2">
 <h2>December 2</h2>
-<p>Complete the statistical reasoning post-test.</p>
+<p>Complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLScCgiqeWS2SvIOe2-ae3j1aWgV_eFdq1fV_3TrkM77FGxp4Ig/viewform?usp=sf_link">statistical reasoning post-test</a>. This is non-evaluative, meaning that <em>if you turn it in, you will get a 2</em>. Please do your best, though. I will show the growth in the class on Wednesday and it’s more interesting when everyone takes this seriously. :)</p>
 </div>
 <div id="december-4" class="section level2">
 <h2>December 4</h2>
